--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	"require": {
 		"php": ">=5.5",
 		"composer/installers": "~1.0",
-		"hypejunction/avatars": "~1.0"
+		"hypejunction/avatars": "*"
 	}
 }
 
